--- a/About.html
+++ b/About.html
@@ -59,10 +59,10 @@
                             <a href="Routine.html">Free Training Routines</a>
                         </li>
                         <li>
-                            <a href="#">About</a>
+                            <a href="About.html">About</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="Contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
