--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head> 
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -62,7 +62,7 @@
                             <a href="About.html">About</a>
                         </li>
                         <li>
-                            <a href="#">Contact</a>
+                            <a href="Contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
