--- a/Routine.html
+++ b/Routine.html
@@ -62,7 +62,7 @@
                             <a href="About.html">About</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="Contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
