--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Home</a>
+                    <a class="navbar-brand" href="index.html">Home</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -62,7 +62,7 @@
                             <a href="About.html">About</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="Contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
