banner width change

--- a/Contact.html
+++ b/Contact.html
@@ -71,6 +71,7 @@
             <!-- /.container -->
         </nav>
 
+        <div>
        <header class="business-header">
             <div class="container">
                 <div class="row">
@@ -87,6 +88,7 @@
                 </ul>
             </div>
         </header>
+    </div>
 
         <!-- Page Content -->
         <div class="container">
@@ -96,6 +98,7 @@
             <div class="row">
                 <div class="col-sm-8">
                     <h2>Contact</h2>
+                    <p>If you want to get in touch with me to talk about the training routine, have video topic requests, or just want to talk about training in general, feel free to email me.
                     <p>email:
                     <a href="mailto:officialemre@gmail.com">officialemre@gmail.com</a></p>
                 </div>
