--- a/About.html
+++ b/About.html
@@ -71,6 +71,7 @@
             <!-- /.container -->
         </nav>
 
+        <div>
        <header class="business-header">
             <div class="container">
                 <div class="row">
@@ -87,6 +88,7 @@
                 </ul>
             </div>
         </header>
+    </div>
 
         <!-- Page Content -->
         <div class="container">
@@ -96,7 +98,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h2>About Me</h2>
-                    <p>What's up, Wolfpack? Emre here. I've been weight training since September 2013 and Powerlifting since March 2015. I weigh 155 pounds. My lifts are:</p></br> 
+                    <p>What's up, Wolfpack? Emre here. I've been weight training since September 2013 and Powerlifting since March 2015. I weigh 155 pounds. My lifts are:</p>
                         <ul><li>Deadlift: 470 <li>Squat: 370 <li>Bench: 275 
                         </ul>
                     <p> 
