--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <!-- /.container -->
         </nav>
 
+        <div class="container">
         <header class="business-header">
             <div class="container">
                 <div class="row">
@@ -87,6 +88,7 @@
                 </ul>
             </div>
         </header>
+    </div>
 
         <!-- Page Content -->
         <div class="container">
