--- a/about.html
+++ b/about.html
@@ -56,13 +56,13 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="Routine.html">Free Training Routines</a>
+                            <a href="routine.html">Free Training Routines</a>
                         </li>
                         <li>
-                            <a href="About.html">About</a>
+                            <a href="about.html">About</a>
                         </li>
                         <li>
-                            <a href="Contact.html">Contact</a>
+                            <a href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
