--- a/routine.html
+++ b/routine.html
@@ -39,7 +39,7 @@
 
     <body>
 
-        <!-- Navigation -->
+         <!-- Navigation -->
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -56,7 +56,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="routine">Free Training Routines</a>
+                            <a href="routine.html">Free Training Routines</a>
                         </li>
                         <li>
                             <a href="about.html">About</a>
@@ -65,19 +65,7 @@
                             <a href="contact.html">Contact</a>
                         </li>
                     </ul>
-                </div>
-                <!-- /.navbar-collapse -->
-            </div>
-            <!-- /.container -->
-        </nav>
-
-            <header class="business-header">
-            <div class="container">
-                <div class="row">
-                </div>
-            </div>
-            <div class="col-md-10">
-                <ul class="list-inline social-buttons">
+                                    <ul class="list-inline social-buttons">
                     <li><a target="_blank" href="https://twitter.com/emree_lan"><i class="fa fa-twitter"></i></a>
                     </li>
                     <li><a target="_blank" href="https://www.facebook.com/EmreKurtFitness"><i class="fa fa-facebook"></i></a>
@@ -85,8 +73,20 @@
                     <li><a target="_blank" href="https://www.instagram.com/emree_lan/"><i class="fa fa-instagram"></i></a>
                     </li>
                 </ul>
+                </div>
+                  
+            </div>
+            <!-- /.container -->
+        </nav>
+
+        <div class="container">
+        <header class="business-header">
+            <div class="container">
+                <div class="row">
+                </div>
             </div>
         </header>
+    </div>
 
         <!-- Page Content -->
         <div class="container">
