changing links for htaccess

--- a/contact.html
+++ b/contact.html
@@ -50,19 +50,19 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Home</a>
+                   <a class="navbar-brand" href="http://wwww.emrekurt.me/index">Home</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="routine.html">Free Training Routines</a>
+                            <a href="http://wwww.emrekurt.me/routine">Free Training Routines</a>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="http://wwww.emrekurt.me/about">About</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="http://wwww.emrekurt.me/contact">Contact</a>
                         </li>
                     </ul>
                                     <ul class="list-inline social-buttons">
@@ -99,7 +99,7 @@
                     <p>If you want to get in touch with me to talk about the training routine, have video topic requests, or just want to talk about training in general, feel free to email me.
                     <p>email:
                     <a href="mailto:officialemre@gmail.com">officialemre@gmail.com</a></p>
-                    <p> I can also be reached through my facebook page, twitter, or instagram</p>
+                    <p> I can also be reached through my facebook page, twitter, or instagram.</p>
                 </div>
                 <div class="col-md-6">
                     <h2>Channel</h2>
