--- a/about.html
+++ b/about.html
@@ -50,19 +50,19 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Home</a>
+                   <a class="navbar-brand" href="http://wwww.emrekurt.me/index">Home</a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="routine.html">Free Training Routines</a>
+                            <a href="http://wwww.emrekurt.me/routine">Free Training Routines</a>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="http://wwww.emrekurt.me/about">About</a>
                         </li>
                         <li>
-                            <a href="contact.html">Contact</a>
+                            <a href="http://wwww.emrekurt.me/contact">Contact</a>
                         </li>
                     </ul>
                                     <ul class="list-inline social-buttons">
